# pawclock.com

./: .dockerignore  .editorconfig  .env-template  .gitignore  Dockerfile  Makefile  README.md  compose.yml  database.py  main.py  models.py  pyproject.toml  schema.py
app/: .gitignore
app/config/: config.exs  dev.exs  test.exs
app/lib/app/: account.ex  paw_clock.ex  pets.ex
app/lib/app/account/: pet_owner.ex
app/lib/app/paw_clock/: day_care_session.ex  owner.ex  owner_pet.ex  pet.ex
app/lib/app/pets/: pet.ex
app/lib/app_web/: endpoint.ex  router.ex
app/lib/app_web/components/: core_components.ex
app/lib/app_web/controllers/: page_controller.ex
app/priv/repo/: seeds.exs
app/priv/repo/migrations/: 20250401230453_add_type_to_pets.exs  20250402161857_create_pet_owners.exs  20250404223914_initial.exs  (+7 more)
app/test/app/: account_test.exs  paw_clock_test.exs  pets_test.exs
pawclock/: Makefile  manage.py  pytest.ini
pawclock/app_pawclock/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
pawclock/app_pawclock/migrations/: 0001_create_pet_model.py  0002_created_owner_model.py  0003_owner_pet_many_to_many.py  0004_created_day_care_session_model.py  0005_modified_day_care_session_model.py  0006_add_pet_type_to_pet.py
pawclock/app_pawclock/templates/: base.html  index.html
pawclock/app_pawclock/templatetags/: active_daycare_sessions.py  mytags.py
pawclock/pawclock/: asgi.py  settings.py  urls.py  wsgi.py
pawclock/static/js/: tailwind4.js
tests/: test_care_session.py  test_database.py  test_main.py  test_models.py  test_owners.py  test_pets.py
(+32 files in other folders)
